--- a/app/src/main/res/layout/activity_campus.xml
+++ b/app/src/main/res/layout/activity_campus.xml
@@ -1,75 +1,45 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
-
-            <!--<include layout="@layout/toolbar"/>-->
+        android:orientation="vertical"
+        android:background="@color/white" >
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/abc_action_bar_default_height_material"
                 android:minHeight="@dimen/abc_action_bar_default_height_material"
-                android:background="@color/main00"
+                android:background="@color/main01"
                 app:theme="@style/Toolbar"
                 app:popupTheme="@style/Theme.AppCompat.Light" >
 
             </android.support.v7.widget.Toolbar>
 
+        <!-- The main content view -->
+        <FrameLayout
+            android:id="@+id/content_frame"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" >
 
-            <!--<com.techhab.collegeapp.PagerSlidingTabStrip
-                android:id="@+id/tabs"
+            <fragment android:name="com.techhab.collegeapp.CampusBuildingsFragment"
+                android:id="@+id/buildings_fragment"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_gravity="bottom"
-                app:pstsPaddingMiddle="false"
-                android:fillViewport="true"
-                app:pstsShouldExpand="true"/>-->
-
-        </FrameLayout>
-
-        <!--<android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            tools:context=".AcademicActivity"/>-->
-
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context="com.techhab.collegeapp.CourseSearchFragment">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/campus_recycler_view"
-                android:scrollbars="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
+                android:layout_height="match_parent" />
 
         </FrameLayout>
 
     </LinearLayout>
 
     <!--Navigation Drawer-->
-    <fragment android:id="@+id/home_navigation_drawer"
-        android:layout_width="@dimen/navigation_drawer_width"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:name="com.techhab.collegeapp.NavigationDrawerFragment" />
+    <include layout="@layout/navigation_drawer"
+        android:id="@+id/home_navigation_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
 
