--- a/app/src/main/res/layout/fragment_cafeteria.xml
+++ b/app/src/main/res/layout/fragment_cafeteria.xml
@@ -36,7 +36,7 @@
                         <!--android:background="@color/OpenGreen"-->
 
                         <ImageView
-                            android:id="@+id/fragment_cafeteria_image"
+                            android:id="@+id/status_bar_open_closed_sign"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
                             android:layout_margin="5dp"
@@ -48,7 +48,7 @@
                             android:layout_width="fill_parent"
                             android:layout_height="fill_parent">
 
-                            <TextView android:id="@+id/fragment_cafeteria_tvInfo"
+                            <TextView android:id="@+id/time_left_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="16dp"
@@ -288,17 +288,17 @@
                 android:layout_margin="8dp"
 
 
-                android:id="@+id/fragment_cafeteria_spinner"
+                android:id="@+id/day_spinner"
                 android:drawSelectorOnTop="true"
                 style="@style/SpinnerStyle"
                 android:layout_below="@+id/cafeteria_status_bar"
                 />
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/fragment_cafeteria_rvMenu"
+                android:id="@+id/meals_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/fragment_cafeteria_spinner"
+                android:layout_below="@+id/day_spinner"
                 android:descendantFocusability="afterDescendants"
                 />
 
