--- a/app/src/main/res/layout/caf_meal_card.xml
+++ b/app/src/main/res/layout/caf_meal_card.xml
@@ -34,7 +34,7 @@
                     android:textColor="@color/white" />
 
                 <TextView
-                    android:id="@+id/time"
+                    android:id="@+id/currently_serving"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:layout_gravity="end"
