--- a/app/src/main/res/layout/events_recycle.xml
+++ b/app/src/main/res/layout/events_recycle.xml
@@ -59,19 +59,21 @@
         <com.techhab.kcollegecustomviews.ProgressBar
             android:id="@+id/progress_bar"
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:paddingTop="16dp"
             android:paddingBottom="16dp"
-            android:gravity="center" />
+            android:gravity="center"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/place"
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:padding="16dp"
             android:textSize="14sp"
-            android:textColor="@color/primary_text_default_material_light" />
+            android:textColor="@color/primary_text_default_material_light"
+            android:visibility="gone" />
 
         <include layout="@layout/card_divider"
             android:id="@+id/divider" />
@@ -97,46 +99,50 @@
             <ImageView
                 android:contentDescription="@string/content_description"
                 android:id="@+id/favorite_button"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:gravity="center_horizontal"
                 android:src="@drawable/ic_favorite_outline"
                 android:background="@android:color/transparent"
-                android:clickable="true" />
+                android:clickable="true"
+                android:visibility="gone" />
 
             <ImageView
                 android:contentDescription="@string/content_description"
                 android:id="@+id/building_button"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:gravity="center_horizontal"
                 android:src="@drawable/ic_campus"
                 android:background="@android:color/transparent"
-                android:clickable="true" />
+                android:clickable="true"
+                android:visibility="gone" />
 
             <ImageView
                 android:contentDescription="@string/content_description"
                 android:id="@+id/calendar_button"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:gravity="center_horizontal"
                 android:src="@drawable/ic_calendar"
                 android:background="@android:color/transparent"
-                android:clickable="true" />
+                android:clickable="true"
+                android:visibility="gone" />
 
             <ImageView
                 android:contentDescription="@string/content_description"
                 android:id="@+id/attending_button"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:gravity="center_horizontal"
                 android:src="@drawable/ic_check"
                 android:background="@android:color/transparent"
-                android:clickable="true" />
+                android:clickable="true"
+                android:visibility="gone" />
 
         </LinearLayout>
 
