--- a/app/src/main/res/layout/activity_pin.xml
+++ b/app/src/main/res/layout/activity_pin.xml
@@ -1,93 +1,184 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.techhab.collegeapp.application.PINActivity">
+    android:orientation="vertical"
+    tools:context="com.techhab.collegeapp.application.PINActivity"
+    android:weightSum="10">
 
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/pintextlayout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/numpadLayout"
         android:layout_gravity="center"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/gridLayout"
-        android:layout_marginBottom="120dp"
+        android:layout_weight="4"
+        android:orientation="vertical"
+        android:weightSum="10"
+        android:gravity="bottom"
+        android:paddingBottom="16dp">
 
-        android:id="@+id/pintextlayout">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:src="@drawable/k_login_header"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="4"/>
+
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/pin_message"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
             android:gravity="center"
-            android:layout_below="@+id/linearLayout"
+            android:textSize="14sp"
+            android:layout_weight="1"/>
+
+        <TextView
             android:id="@+id/pintext"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@+id/linearLayout"
+            android:gravity="center"
             android:inputType="numberPassword"
             android:maxLength="4"
-            android:textSize="30sp"/>
+            android:textSize="50sp"
+            android:layout_weight="3"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:id="@+id/numpadLayout"
+        android:weightSum="4"
+        android:layout_weight="6">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:weightSum="3"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button1"
+                android:text="1"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"/>
+
+            <Button
+                android:id="@+id/button2"
+                android:text="2"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"/>
+
+            <Button
+                android:id="@+id/button3"
+                android:text="3"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"/>
         </LinearLayout>
 
-    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:columnCount="3"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/gridLayout">
-        <Button
-            android:id="@+id/button1"
-            android:text="1" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:weightSum="3">
 
-        <Button
-            android:id="@+id/button2"
-            android:text="2"/>
+            <Button
+                android:id="@+id/button4"
+                android:text="4"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"/>
 
-        <Button
-            android:id="@+id/button3"
-            android:text="3" />
+            <Button
+                android:id="@+id/button5"
+                android:text="5"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"/>
 
-        <Button
-            android:id="@+id/button4"
-            android:text="4" />
+            <Button
+                android:id="@+id/button6"
+                android:text="6"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"/>
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/button5"
-            android:text="5" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:weightSum="3">
 
-        <Button
-            android:id="@+id/button6"
-            android:text="6" />
+            <Button
+                android:id="@+id/button7"
+                android:text="7"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"/>
 
-        <Button
-            android:id="@+id/button7"
-            android:text="7" />
+            <Button
+                android:id="@+id/button8"
+                android:text="8"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"/>
 
-        <Button
-            android:id="@+id/button8"
-            android:text="8" />
+            <Button
+                android:id="@+id/button9"
+                android:text="9"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"/>
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/button9"
-            android:text="9" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:gravity="right">
 
-        <Button
-            android:id="@+id/button_password"
-            android:text="Password"
-            android:textSize="@dimen/abc_text_size_small_material"/>
+            <Button
+                android:id="@+id/button_password"
+                android:text="Password"
+                android:textSize="@dimen/abc_text_size_small_material"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"/>
 
-        <Button
-            android:id="@+id/button0"
-            android:text="0" />
+            <Button
+                android:id="@+id/button0"
+                android:text="0"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"/>
 
-        <ImageButton
-            android:id="@+id/button_backspace"
-            android:src="@drawable/ic_action_previous_item"/>
-    </GridLayout>
+            <ImageButton
+                android:id="@+id/button_backspace"
+                android:src="@drawable/ic_action_previous_item"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="fill_parent"/>
+        </LinearLayout>
+    </LinearLayout>
 
 
-</RelativeLayout>
+</LinearLayout>
