--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -18,6 +18,7 @@
         android:title="@string/setting_user_controls">
 
         <PreferenceScreen android:title="@string/setting_setup_pin_title"
+            android:key="pref_key_setup_pin"
             android:summary="@string/setting_setup_pin_summary">
             <intent
                 android:action="android.intent.action.MAIN"
@@ -26,10 +27,15 @@
                 />
         </PreferenceScreen>
 
-        <Preference
+        <PreferenceScreen android:title="@string/setting_modify_pin_title"
             android:key="pref_key_modify_pin"
-            android:summary="@string/setting_modify_pin_summary"
-            android:title="@string/setting_modify_pin_title" />
+            android:summary="@string/setting_modify_pin_summary">
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="com.techhab.collegeapp"
+                android:targetClass="com.techhab.collegeapp.PINSetupActivity"
+                />
+        </PreferenceScreen>
 
         <Preference
             android:key="pref_key_forget_pin"
