--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,12 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="305dp"
     android:layout_height="match_parent"
-    android:layout_gravity="start">
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_gravity="start"
     android:background="@color/drawerBackground"
     android:orientation="vertical"
     android:clickable="true"
@@ -18,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
@@ -42,14 +39,10 @@
     </LinearLayout>
 
 
-    <!-- divider -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/drawerDivider"/>
+    <!-- Content ListView -->
+    <include layout="@layout/nav_divider" />
 
-    <TextView
+    <!--<TextView
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:gravity="center_vertical"
@@ -57,35 +50,43 @@
         android:textSize="14sp"
         android:textStyle="bold"
         android:textColor="@color/theGray"
-        android:text="@string/my_profile"/>
+        android:text="@string/my_profile"/>-->
+
+    <ListView
+        android:id="@+id/profile_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:choiceMode="singleChoice"
+        android:divider="@null"
+        android:background="@color/drawerBackground" />
 
     <!-- Content ListView -->
+    <include layout="@layout/nav_divider" />
+
     <ListView
         android:id="@+id/drawer_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:choiceMode="singleChoice"
         android:divider="@null"
-        android:layout_weight="1"
         android:background="@color/drawerBackground" />
 
     <!-- Settings and Support ListView -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@color/drawerDivider" />
+    <include layout="@layout/nav_divider" />
 
     <ListView
         android:id="@+id/settings_support"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:choiceMode="singleChoice"
         android:divider="@null"
         android:layout_marginBottom="20dp"
         android:background="@color/drawerBackground" />
 
 </LinearLayout>
-
-    </FrameLayout>
