--- a/app/src/main/res/layout/academic_calendar_recycle.xml
+++ b/app/src/main/res/layout/academic_calendar_recycle.xml
@@ -10,23 +10,30 @@
     android:animateLayoutChanges="true" >
 
     <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="16dp"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/term"
+            style="@style/CardTitle"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:padding="16dp"
-            android:textSize="24sp"
-            android:textColor="@color/main00" />
+            android:layout_height="wrap_content" />
 
         <TableLayout
             android:id="@+id/table_layout"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"/>
+
+        </LinearLayout>
 
         <include layout="@layout/card_divider" />
 
@@ -49,6 +56,6 @@
 
         </LinearLayout>
 
-    </LinearLayout>
 
+    </LinearLayout>
 </android.support.v7.widget.CardView>
