--- a/app/src/main/res/layout/fragment_cafeteria.xml
+++ b/app/src/main/res/layout/fragment_cafeteria.xml
@@ -23,12 +23,6 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-               <!-- <TextView android:id="@+id/fragment_cafeteria_tvInfo1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:textColor="@color/white"
-                    android:text="@string/open"/>-->
                     <FrameLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
@@ -281,20 +275,11 @@
 
             </LinearLayout>
 
-            <Spinner
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:id="@+id/day_spinner"
-                android:drawSelectorOnTop="true"
-                style="@style/SpinnerStyle"
-                android:layout_below="@+id/cafeteria_status_bar" />
-
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/meals_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/day_spinner"
+                android:layout_below="@+id/cafeteria_status_bar"
                 android:descendantFocusability="afterDescendants"
                 />
 
