made some changes
made some changes

--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -1,88 +1,236 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<android.support.v7.widget.CardView
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:layout_margin="8dp"
-    >
-    <EditText
-        android:id="@+id/et_feed_back"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_margin="16dp"
-        android:background="@null"
-        android:textColor="@color/secondary_text_default_material_light"
-        android:hint="Write your feed back"
-        android:gravity="left"/>
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_margin="8dp"
-        android:layout_marginTop="10dp"
-        >
-       <RelativeLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:padding="16dp">
-
-           <TextView
-               android:id="@+id/tvItemTitle"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:textSize="20dp"
-               android:text="Student Account"
-               android:textColor="@color/primary_dark_material_dark"
-               />
-           <TextView
-               android:id="@+id/tvDescription"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_below="@+id/tvItemTitle"
-               android:textColor="@color/secondary_text_default_material_light"
-               android:text="Include your google account information"
-               android:layout_toLeftOf="@+id/witchCompatStudentAccount"
-               android:layout_toStartOf="@+id/witchCompatStudentAccount" />
-           <android.support.v7.widget.SwitchCompat
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               app:showText="false"
-               android:layout_below="@+id/tvItemTitle"
-               android:layout_alignParentRight="true"
-               android:layout_alignParentEnd="true"
-               android:id="@+id/witchCompatStudentAccount" />
-       </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/feedBack_parentView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        >
-        <Button
-            android:id="@+id/feed_back_btSend"
-            android:layout_width="wrap_content"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/MaterialButtonFlat"
+            android:layout_margin="8dp">
 
-            android:text="Send"/>
+            <EditText
+                android:id="@+id/et_feed_back"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_margin="16dp"
+                android:background="@null"
+                android:gravity="left"
+                android:hint="Write your feed back"
+                android:textColor="@color/secondary_text_default_material_light" />
 
-        <Button
-            android:id="@+id/feed_back_btPreview"
-            android:layout_width="wrap_content"
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            style="@style/MaterialButtonFlat"
+            android:layout_margin="8dp"
+            android:layout_marginTop="10dp">
 
-            android:text="Preview"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/tvItemTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Student Account"
+                    android:textColor="@color/primary_dark_material_dark"
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:id="@+id/tvDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvItemTitle"
+                    android:layout_toLeftOf="@+id/witchCompatStudentAccount"
+                    android:layout_toStartOf="@+id/witchCompatStudentAccount"
+                    android:text="Include your google account information"
+                    android:textColor="@color/secondary_text_default_material_light" />
+
+                <android.support.v7.widget.SwitchCompat
+                    android:id="@+id/witchCompatStudentAccount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@+id/tvItemTitle"
+                    app:showText="false" />
+
+                <View
+                    android:id="@+id/student_account_divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/tvDescription"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/gray" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/student_account_divider"
+                    android:orientation="vertical"
+                    android:paddingTop="10dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Application Version"
+                            android:textColor="@color/secondary_text_default_material_light" />
+
+                        <TextView
+                            android:id="@+id/tv_application_version"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="3.1 snapshot"
+                            android:textColor="@color/primary_dark_material_dark" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/gray" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Device model"
+                            android:textColor="@color/secondary_text_default_material_light" />
+
+                        <TextView
+                            android:id="@+id/tv_device_model"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="3.1 snapshot"
+                            android:textColor="@color/primary_dark_material_dark" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/gray" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="OS version"
+                            android:textColor="@color/secondary_text_default_material_light" />
+
+                        <TextView
+                            android:id="@+id/tv_os_version"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="3.1 snapshot"
+                            android:textColor="@color/primary_dark_material_dark" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/gray" />
+
+                    <LinearLayout
+                        android:id="@+id/preview_llGoogleAccount"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Google account"
+                            android:textColor="@color/secondary_text_default_material_light" />
+
+                        <TextView
+                            android:id="@+id/tv_google_account"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="3.1 snapshot"
+                            android:textColor="@color/primary_dark_material_dark" />
+                    </LinearLayout>
+
+                    <View
+                        android:id="@+id/preview_googleAccountDivider"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/gray" />
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Time"
+                            android:textColor="@color/secondary_text_default_material_light" />
+
+                        <TextView
+                            android:id="@+id/tv_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="3.1 snapshot"
+                            android:textColor="@color/primary_dark_material_dark" />
+                    </LinearLayout>
+
+
+                </LinearLayout>
+            </RelativeLayout>
+
+
+        </android.support.v7.widget.CardView>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <Button
+                android:id="@+id/feed_back_btSend"
+                style="@style/MaterialButtonFlat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="Send" />
+
 
         </RelativeLayout>
 
 
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
