--- a/app/src/main/res/layout/activity_athletic.xml
+++ b/app/src/main/res/layout/activity_athletic.xml
@@ -91,7 +91,7 @@
 
                     </FrameLayout>
 
-            <com.techhab.collegeapp.PagerSlidingTabStrip
+            <com.techhab.collegeapp.SlidingTabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
