--- a/app/src/main/res/layout/activity_dining.xml
+++ b/app/src/main/res/layout/activity_dining.xml
@@ -37,7 +37,7 @@
                 android:layout_gravity="center_vertical|end"
                 style="@style/SpinnerStyle" />
 
-            <com.techhab.collegeapp.PagerSlidingTabStrip
+            <com.techhab.collegeapp.SlidingTabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
