--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -1,17 +1,19 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true" >
 
-    <LinearLayout
+    <com.techhab.collegeapp.TouchInterceptionFrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/header"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -25,11 +27,10 @@
                 app:theme="@style/Toolbar"
                 app:popupTheme="@style/Theme.AppCompat.Light" />
 
-            <com.techhab.collegeapp.PagerSlidingTabStrip
+            <com.techhab.collegeapp.SlidingTabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_gravity="bottom"
+                android:layout_height="wrap_content"
                 android:scrollbars="none"
                 android:fillViewport="true"
                 android:clipToPadding="false"
@@ -43,15 +44,21 @@
             android:layout_height="wrap_content"
             android:paddingTop="16dp"
             android:paddingBottom="16dp"
-            android:gravity="center" />
+            android:layout_gravity="center" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            tools:context=".EventsActivity" />
+        <FrameLayout
+            android:id="@+id/pager_wrapper"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
-    </LinearLayout>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".EventsActivity" />
+        </FrameLayout>
+
+    </com.techhab.collegeapp.TouchInterceptionFrameLayout>
 
     <fragment android:id="@+id/home_navigation_drawer"
         android:layout_width="@dimen/navigation_drawer_width"
