--- a/app/src/main/res/layout/tab.xml
+++ b/app/src/main/res/layout/tab.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tab_title"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    style="@style/ThemeOverlay.AppCompat.Light"
+    android:layout_width="wrap_content"
+    android:layout_height="48dp"
     android:gravity="center"
-    android:singleLine="true" />
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:textColor="@color/primary_text_default_material_dark"
+    android:textSize="14sp" />
