--- a/app/src/main/res/drawable/listview_divider.xml
+++ b/app/src/main/res/drawable/listview_divider.xml
@@ -5,7 +5,7 @@
 
     <shape
         android:shape="rectangle" >
-        <solid android:color="@color/gray"/>
+        <solid android:color="@color/grey"/>
 
     </shape>
 
