--- a/app/src/main/res/layout/day_spinner_row.xml
+++ b/app/src/main/res/layout/day_spinner_row.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16dp"
-        android:textColor="@color/gray"
+        android:textColor="@color/grey"
         android:layout_marginLeft="5dp"
         />
 
