--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -73,7 +73,7 @@
                     android:layout_below="@+id/tvDescription"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/gray" />
+                    android:background="@color/grey" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -106,7 +106,7 @@
                         android:layout_height="1dp"
                         android:layout_marginBottom="10dp"
                         android:layout_marginTop="10dp"
-                        android:background="@color/gray" />
+                        android:background="@color/grey" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -132,7 +132,7 @@
                         android:layout_height="1dp"
                         android:layout_marginBottom="10dp"
                         android:layout_marginTop="10dp"
-                        android:background="@color/gray" />
+                        android:background="@color/grey" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -158,7 +158,7 @@
                         android:layout_height="1dp"
                         android:layout_marginBottom="10dp"
                         android:layout_marginTop="10dp"
-                        android:background="@color/gray" />
+                        android:background="@color/grey" />
 
                     <LinearLayout
                         android:id="@+id/preview_llGoogleAccount"
@@ -186,7 +186,7 @@
                         android:layout_height="1dp"
                         android:layout_marginBottom="10dp"
                         android:layout_marginTop="10dp"
-                        android:background="@color/gray" />
+                        android:background="@color/grey" />
 
 
                     <LinearLayout
