--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.techhab.collegeapp.HomeFragment">
-    <!--android:background="@drawable/example_home_background"-->
 
     <LinearLayout
         android:id="@+id/image_description"
@@ -60,10 +60,10 @@
             <TableLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/eighty_percent_opacity"
                 android:padding="5dp"
                 android:orientation="vertical"
                 android:weightSum="2" >
+                <!--android:background="@color/eighty_percent_opacity"-->
 
                 <TableRow
                     android:layout_width="fill_parent"
@@ -71,29 +71,25 @@
                     android:orientation="horizontal"
                     android:paddingTop="8dp" >
 
-                    <LinearLayout
+                    <android.support.v7.widget.CardView
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:orientation="vertical" >
+                        android:layout_height="@dimen/main_menu_card_height"
+                        style="@style/MainMenuCard" >
 
-                        <TextView
-                            style="@style/MainMenuItem"
-                            android:id="@+id/main_menu_00"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:drawableTop="@drawable/ic_school_white_36dp"
-                            android:text="@string/main_menu_00" />
+                            <TextView
+                                style="@style/MainMenuItem"
+                                android:id="@+id/main_menu_00"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:drawableTop="@drawable/ic_school_white_36dp"
+                                android:text="@string/main_menu_00" />
 
-                    </LinearLayout>
+                    </android.support.v7.widget.CardView>
 
-                    <LinearLayout
+                    <android.support.v7.widget.CardView
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:orientation="vertical" >
+                        android:layout_height="@dimen/main_menu_card_height"
+                        style="@style/MainMenuCard" >
 
                         <TextView
                             style="@style/MainMenuItem"
@@ -103,14 +99,12 @@
                             android:drawableTop="@drawable/ic_bank_white_36dp"
                             android:text="@string/main_menu_01" />
 
-                    </LinearLayout>
+                    </android.support.v7.widget.CardView>
 
-                    <LinearLayout
+                    <android.support.v7.widget.CardView
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:orientation="vertical" >
+                        android:layout_height="@dimen/main_menu_card_height"
+                        style="@style/MainMenuCard" >
 
                         <TextView
                             style="@style/MainMenuItem"
@@ -120,7 +114,7 @@
                             android:drawableTop="@drawable/ic_silverware_white_36dp"
                             android:text="@string/main_menu_02" />
 
-                    </LinearLayout>
+                    </android.support.v7.widget.CardView>
 
                 </TableRow>
 
@@ -129,15 +123,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:orientation="horizontal"
-                    android:paddingTop="28dp"
                     android:paddingBottom="8dp">
 
-                    <LinearLayout
+                    <android.support.v7.widget.CardView
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:orientation="vertical" >
+                        android:layout_height="@dimen/main_menu_card_height"
+                        style="@style/MainMenuCard" >
 
                         <TextView
                             style="@style/MainMenuItem"
@@ -147,16 +138,12 @@
                             android:drawableTop="@drawable/ic_trophy_variant_white_36dp"
                             android:text="@string/main_menu_10" />
 
-                    </LinearLayout>
+                    </android.support.v7.widget.CardView>
 
-
-
-                    <LinearLayout
+                    <android.support.v7.widget.CardView
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:orientation="vertical" >
+                        android:layout_height="@dimen/main_menu_card_height"
+                        style="@style/MainMenuCard" >
 
                         <TextView
                             style="@style/MainMenuItem"
@@ -166,14 +153,12 @@
                             android:drawableTop="@drawable/ic_calendar_white_36dp"
                             android:text="@string/main_menu_11" />
 
-                    </LinearLayout>
+                    </android.support.v7.widget.CardView>
 
-                    <LinearLayout
+                    <android.support.v7.widget.CardView
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:orientation="vertical" >
+                        android:layout_height="@dimen/main_menu_card_height"
+                        style="@style/MainMenuCard" >
 
                         <TextView
                             style="@style/MainMenuItem"
@@ -183,7 +168,7 @@
                             android:drawableTop="@drawable/ic_map_white_36dp"
                             android:text="@string/main_menu_12" />
 
-                    </LinearLayout>
+                    </android.support.v7.widget.CardView>
 
                 </TableRow>
 
