--- a/app/src/main/res/layout/helper_dialog.xml
+++ b/app/src/main/res/layout/helper_dialog.xml
@@ -37,7 +37,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/gray"/>
+        android:background="@color/grey"/>
 
     <TextView
         android:id="@+id/healer_dialog_tvCancel"
