--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -12,6 +12,7 @@
     <!-- Kzoo College colors -->
     <color name="kzooOrange">#E27226</color>
     <color name="kzooOrangeLight">#E5813C</color>
+    <color name="kzooOrangeLighter">#eb9e69</color>
     <color name="main00">#E27226</color>
     <color name="main01">#E26526</color>
     <color name="main10">#E25826</color>
@@ -49,7 +50,7 @@
     <color name="fuchsia">#FF00FF</color>
     <color name="red">#FF0000</color>
     <color name="silver">#C0C0C0</color>
-    <color name="gray">#808080</color>
+    <color name="grey">#808080</color>
     <color name="olive">#808000</color>
     <color name="purple">#800080</color>
     <color name="maroon">#800000</color>
@@ -121,7 +122,7 @@
     <color name="Goldenrod">#DAA520</color>
     <color name="Orchid">#DA70D6</color>
     <color name="Thistle">#D8BFD8</color>
-    <color name="LightGray">#D3D3D3</color>
+    <color name="LightGrey">#D3D3D3</color>
     <color name="Tan">#D2B48C</color>
     <color name="Chocolate">#D2691E</color>
     <color name="Peru">#CD853F</color>
@@ -138,7 +139,7 @@
     <color name="PaleTurquoise">#AFEEEE</color>
     <color name="GreenYellow">#ADFF2F</color>
     <color name="LightBlue">#ADD8E6</color>
-    <color name="DarkGray">#A9A9A9</color>
+    <color name="DarkGrey">#A9A9A9</color>
     <color name="Brown">#A52A2A</color>
     <color name="Sienna">#A0522D</color>
     <color name="YellowGreen">#9ACD32</color>
@@ -154,7 +155,7 @@
     <color name="BlueViolet">#8A2BE2</color>
     <color name="LightSkyBlue">#87CEFA</color>
     <color name="SkyBlue">#87CEEB</color>
-    <color name="Gray">#808080</color>
+    <color name="Grey">#808080</color>
     <color name="Olive">#808000</color>
     <color name="Purple">#800080</color>
     <color name="Maroon">#800000</color>
@@ -162,11 +163,11 @@
     <color name="Chartreuse">#7FFF00</color>
     <color name="LawnGreen">#7CFC00</color>
     <color name="MediumSlateBlue">#7B68EE</color>
-    <color name="LightSlateGray">#778899</color>
-    <color name="SlateGray">#708090</color>
+    <color name="LightSlateGrey">#778899</color>
+    <color name="SlateGrey">#708090</color>
     <color name="OliveDrab">#6B8E23</color>
     <color name="SlateBlue">#6A5ACD</color>
-    <color name="DimGray">#696969</color>
+    <color name="DimGrey">#696969</color>
     <color name="MediumAquamarine">#66CDAA</color>
     <color name="CornflowerBlue">#6495ED</color>
     <color name="CadetBlue">#5F9EA0</color>
@@ -179,7 +180,7 @@
     <color name="Turquoise">#40E0D0</color>
     <color name="MediumSeaGreen">#3CB371</color>
     <color name="LimeGreen">#32CD32</color>
-    <color name="DarkSlateGray">#2F4F4F</color>
+    <color name="DarkSlateGrey">#2F4F4F</color>
     <color name="SeaGreen">#2E8B57</color>
     <color name="ForestGreen">#228B22</color>
     <color name="LightSeaGreen">#20B2AA</color>
@@ -205,6 +206,8 @@
 
 
     <!-- Material Colors -->
-    <color name="Gray_200">#EEEEEE</color>
+    <color name="grey200">#EEEEEE</color>
+    <color name="grey600">#757575</color>
+    <color name="grey800">#424242</color>
 
 </resources>
