--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -133,14 +133,24 @@
     </style>
 
     <style name="MainMenuItem">
-        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_gravity">center</item>
         <!--<item name="android:paddingLeft">24dp</item>-->
         <item name="android:gravity">center_vertical</item>
         <item name="android:drawablePadding">3dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
         <!--<item name="android:textStyle">bold</item>-->
+        <!--<item name="android:clickable">true</item>-->
+    </style>
+
+    <style name="MainMenuCard" parent="@style/CardView">
+        <item name="android:layout_gravity">top</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_weight">1</item>
+        <item name="cardBackgroundColor">@color/kzooOrangeLight</item>
         <item name="android:clickable">true</item>
+
     </style>
 
 </resources>
